# retinal-fundus-to-systemic-screening

./: .gitignore  AGENTS.md  CLAUDE.md  PROTECTED_FILES.md  README.md  environment.yml  pyproject.toml  requirements.txt
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
configs/backbone/: mock.yaml
configs/dataset/: odir.yaml
configs/experiment/: baseline_odir_dinov2.yaml  baseline_odir_retfound.yaml  smoke_dummy.yaml  stage8d1_brset_resnet50_rehearsal_multitask.yaml  stage8d2_brset_resnet50_full_multitask.yaml
configs/preprocessing/: default_224.yaml
configs/tasks/: odir_default.yaml
configs/training/: standard.yaml
docs/: architecture.md  architecture_guardrails.md  dataset_inventory.md  decisions.md  implementation_reference.md  issues_and_solutions.md  mvp_build_order.md  project_plan.md  project_specification.md  project_status.md
docs/ai_context/: 00_source_of_truth_order.md  01_architecture_contract.md  02_guardrails_compressed.md  05_adapter_contract.md  (+3 more)
scripts/: 00_smoke_dummy.py  01_make_splits.py  02_verify_backbone_one_image.py  03_extract_embeddings.py  04_train.py  05_evaluate.py
tests/: test_cache_manifest.py  test_dummy_adapter.py  test_dummy_e2e.py  test_evaluate_checkpoint_selection.py  test_evaluation_metrics.py  test_feature_policy.py  test_import_boundaries.py  test_no_dataset_coupling.py  test_odir_adapter.py  test_patient_split.py  test_schema_tasks_policy.py  test_script_guards.py  test_sparse_subgroup_eval.py  test_split_audit.py  test_stage8d2_safeguards.py  test_task_masking.py  test_training_infrastructure.py
(+15 files in other folders)
