[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retinal-fundus-to-systemic-screening"
version = "0.1.0"
description = "Dataset-agnostic retinal foundation-model pipeline for multi-condition screening, fairness auditing, and continual-learning simulation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "TBD" }
authors = [
  { name = "Project Team" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10"
]
torch = [
  "torch>=2.3",
  "torchvision>=0.18",
  "pillow>=10.0"
]
viz = [
  "matplotlib>=3.8",
  "plotly>=5.22"
]
dashboard = [
  "streamlit>=1.36"
]
explain = [
  "captum>=0.7",
  "shap>=0.45"
]
tracking = [
  "mlflow>=2.13"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
